refactor(backend/admin-gin): 对接apifox生成openapi文档
