# backend/admin-gin/internal/app/admin/iam/auth/router.go
@@ -11,15 +11,16 @@ func registerRouter(r *gin.RouterGroup, handlers *handler) {
 	// 不需鉴权
 	publicGroup := r.Group("/auth")
 	{
+
 		publicGroup.POST("/register", handlers.register)
 		publicGroup.POST("/login", handlers.login)
-		publicGroup.POST("/refresh", handlers.refresh)
+		publicGroup.POST("/session/refresh", handlers.refresh) // session 前缀用于路径匹配 cookie 添加 refersh token
 	}
 
 	// 需要鉴权
 	authGroup := r.Group("/auth")
 	authGroup.Use(middleware.JWT())
 	{
-		authGroup.POST("/logout", handlers.logout)
+		authGroup.POST("/session/logout", handlers.logout) // session 前缀用于路径匹配 cookie 添加 refersh token
 	}
 }
